deploy/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    application: kube-ops-view
    version: v0.0.1
  name: kube-ops-view
spec:
  replicas: 1
  selector:
    matchLabels:
      application: kube-ops-view
  template:
    metadata:
      labels:
        application: kube-ops-view
        version: v0.0.1
    spec:
      serviceAccount: kube-ops-view
      containers:
      - name: service
        image: rafaelcaricio/rpi-kube-ops-view:0.7.1-11
        imagePullPolicy: Always
        args:
        - --kubeconfig-path=/kubernetes/kubeconfig.conf
        - --redis-url=redis://kube-ops-view-redis:6379
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 200m
            memory: 100Mi
          requests:
            cpu: 50m
            memory: 50Mi
        volumeMounts:
        - mountPath: /kubernetes
          name: kubernetes-config
          readOnly: true
      volumes:
      - name: kubernetes-config
        configMap:
          name: kube-ops-view
