deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kube-ops-view
spec:
  rules:
  - host: kube-ops-view.homeservice.click
    http:
      paths:
      - path: /
        backend:
          serviceName: kube-ops-view
          servicePort: 80
